# DAD-Governance-Kernel

./: README.md  pyproject.toml
docs/: ARCHITECTURE.MD  ARCHITECTURE.MD   WHITEPAPER.md
examples/: example_output.md  example_run.md  run_demo.py
examples/examples/: run_demo.py
paper/: DAD_Governance_Kernel_Whitepaper_v1.0.md
src/dad/: __init__.py  cli.py  constraints.py  delegation (1).py  drift_engine.py  governance_kernel (1).py  kernel.py  logger.py  main.py  state_machine.py  temp.py  test_invariants.py  types.py
